--- a/firstrun/.env.tmpl
+++ b/firstrun/.env.tmpl
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_ENDPOINT=https://firstrun-api-${OKTETO_NAMESPACE}.cloud.okteto.net
-INTERNAL_API_ENDPOINT=https://firstrun-api-${OKTETO_NAMESPACE}.cloud.okteto.net
+NEXT_PUBLIC_API_ENDPOINT=https://firstrun-api-${OKTETO_NAMESPACE}.cloud.okteto.net/config
+INTERNAL_API_ENDPOINT=https://firstrun-api-${OKTETO_NAMESPACE}.cloud.okteto.net/config
